recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:10: error: not found: value levels
    sierpinski(levels-1,length/2)
               ^